--- a/app/views/settings/severities/edit.html.erb
+++ b/app/views/settings/severities/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Settings::Severities#edit</h1>
-<p>Find me in app/views/settings/severities/edit.html.erb</p>
+<div class="settings-container">
+  <div class="settings-header">
+    <h1>Editar Severidad</h1>
+    <%= link_to 'Volver a la lista de Severidades', settings_severities_path, class: 'btn btn-link' %>
+  </div>
+
+  <%= form_with model: @severity, url: settings_severity_path(@severity), method: :put, local: true do |form| %>
+    <div class="form-group">
+      <%= form.label :name, 'Nombre de la Severidad' %>
+      <%= form.text_field :name, class: 'form-control', value: @severity.name %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :color, 'Color de la Severidad' %>
+      <%= form.color_field :color, class: 'form-control', value: @severity.color %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :position, 'Posición' %>
+      <%= form.number_field :position, class: 'form-control', value: @severity.position %>
+    </div>
+
+    <%= form.submit 'Guardar Cambios', class: 'btn btn-primary' %>
+  <% end %>
+</div>
