--- a/app/views/settings/issue_types/new.html.erb
+++ b/app/views/settings/issue_types/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Settings::IssueTypes#new</h1>
-<p>Find me in app/views/settings/issue_types/new.html.erb</p>
+<div class="settings-container">
+  <div class="settings-header">
+    <h1>Crear Nuevo Tipo de Incidencia</h1>
+    <%= link_to 'Volver a la lista de Tipos de Incidencia', settings_issue_types_path, class: 'btn btn-link' %>
+  </div>
+
+  <%= form_with(model: [:settings, @issue_type], local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :name, 'Nombre del Tipo de Incidencia' %>
+      <%= form.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :color, 'Color' %>
+      <%= form.color_field :color, class: 'form-control' %> <!-- Campo para elegir el color -->
+    </div>
+
+    <div class="form-group">
+      <%= form.label :position, 'Posición' %>
+      <%= form.number_field :position, class: 'form-control' %>
+    </div>
+
+    <%= form.submit 'Guardar Tipo de Incidencia', class: 'btn btn-primary' %>
+  <% end %>
+</div>
