--- a/app/views/settings/priorities/index.html.erb
+++ b/app/views/settings/priorities/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Settings::Priorities#index</h1>
-<p>Find me in app/views/settings/priorities/index.html.erb</p>
+<div class="settings-container">
+  <div class="settings-header">
+    <h1>Prioridades</h1>
+    <%= link_to 'Nueva Prioridad', new_settings_priority_path, class: 'btn btn-primary' %>
+  </div>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Color</th>
+        <th>Posición</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @priorities.each do |priority| %>
+        <tr>
+          <td><%= priority.name %></td>
+          <td>
+            <span class="color-sample" style="background-color: <%= priority.color %>; width: 20px; height: 20px; display: inline-block;"></span>
+          </td>
+          <td><%= priority.position %></td>
+          <td>
+            <%= link_to 'Editar', edit_settings_priority_path(priority), class: 'btn btn-sm btn-secondary' %>
+            <%= link_to 'Eliminar', settings_priority_path(priority), method: :delete,
+                data: { confirm: '¿Estás seguro?' }, class: 'btn btn-sm btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to 'Volver a Configuración', settings_path, class: 'btn btn-link' %>
+</div>
+
