--- a/app/views/settings/severities/index.html.erb
+++ b/app/views/settings/severities/index.html.erb
@@ -24,8 +24,9 @@
           <td><%= severity.position %></td>
           <td>
             <%= link_to 'Editar', edit_settings_severity_path(severity), class: 'btn btn-sm btn-secondary' %>
-            <%= link_to 'Eliminar', settings_severity_path(severity), method: :delete,
-                data: { confirm: '¿Estás seguro?' }, class: 'btn btn-sm btn-danger' %>
+            <%= form_with url: settings_severity_path(severity), method: :delete, class: 'd-inline' do %>
+              <%= submit_tag 'Eliminar', class: 'btn btn-sm btn-danger', data: { confirm: '¿Estás seguro?' } %>
+            <% end %>
           </td>
         </tr>
       <% end %>
@@ -34,4 +35,3 @@
 
   <%= link_to 'Volver a Configuración', settings_path, class: 'btn btn-link' %>
 </div>
-
