--- a/app/views/settings/statuses/new.html.erb
+++ b/app/views/settings/statuses/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Settings::Statuses#new</h1>
-<p>Find me in app/views/settings/statuses/new.html.erb</p>
+<h1>Crear status nou</h1>
 <% content_for :title, "New status" %>
 
 <%= render "form", status: @status %>
