--- a/app/views/settings/severities/index.html.erb
+++ b/app/views/settings/severities/index.html.erb
@@ -24,9 +24,7 @@
           <td><%= severity.position %></td>
           <td>
             <%= link_to 'Editar', edit_settings_severity_path(severity), class: 'btn btn-sm btn-secondary' %>
-            <%= form_with url: settings_severity_path(severity), method: :delete, class: 'd-inline' do %>
-              <%= submit_tag 'Eliminar', class: 'btn btn-sm btn-danger', data: { confirm: '¿Estás seguro?' } %>
-            <% end %>
+            <%= link_to 'Eliminar', confirm_destroy_settings_severity_path(severity), class: 'btn btn-sm btn-danger' %>
           </td>
         </tr>
       <% end %>
