--- a/app/views/settings/statuses/index.html.erb
+++ b/app/views/settings/statuses/index.html.erb
@@ -25,11 +25,7 @@
           <td><%= status.position %></td>
           <td>
             <%= link_to 'Editar', edit_settings_status_path(status), class: 'btn btn-sm btn-secondary' %>
-            <%= form_with url: settings_status_path(status), method: :delete, class: 'd-inline' do %>
-              <%= submit_tag 'Eliminar', class: 'btn btn-sm btn-danger', data: { confirm: '¿Estás seguro?' } %>
-            <% end %>
-
-
+            <%= link_to 'Eliminar', confirm_destroy_settings_status_path(status), class: 'btn btn-sm btn-danger' %>
           </td>
         </tr>
       <% end %>
