--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,15 @@
     <nav>
     <div class="nav-right">
         <% if user_signed_in? %>
+          <% if current_user.avatar.attached? %>
+            <%= link_to profile_user_path(current_user) do %>
+              <%= image_tag url_for(current_user.avatar), class: 'nav-avatar' %>
+            <% end %>
+          <% else %>
+            <%= link_to profile_user_path(current_user), class: 'nav-profile-link' do %>
+              <i class="fas fa-user-circle fa-2x"></i>
+            <% end %>
+          <% end %>
           <%= button_to 'Cerrar sesión', destroy_user_session_path, method: :delete %>
         <% end %>
       </div>
