--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -118,8 +118,9 @@
                     <% end %>
                   </h5>
                 <% else %>
-                  <h5>Comment #<%= comment.id %></h5>
+                  <h5>Comment #<%= comment.id %> </h5>
                 <% end %>
+                <div class="comment-date"><%= comment.created_at.strftime("%d %b %Y %H:%M") %></div>
                 <p><%= comment.content %></p>
               </div>
             <% end %>
@@ -374,5 +375,16 @@
 
   .issue-link:hover {
     text-decoration: underline;
+  }
+  .comment-item {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #eee;
+  }
+
+  .comment-date {
+    font-size: 12px;
+    color: #666;
+    margin: 5px 0;
   }
 </style>
